--- a/common/ezo_hum.yaml
+++ b/common/ezo_hum.yaml
@@ -4,6 +4,14 @@ substitutions:
   update_hum: "60s"
   update_button_hum: "60s"
 
+  sorting_group_hum: '35'
+
+web_server:
+  sorting_groups:
+    - id: sorting_group_hum
+      name: "Humidity - EZO"
+      sorting_weight: ${sorting_group_hum}
+
 esphome:
     on_boot: 
         priority: 800
@@ -50,6 +58,9 @@ sensor:
       then:
         - lambda: 
             id(result_hum).publish_state(x);
+    web_server:
+      sorting_group_id: sorting_group_hum
+      sorting_weight: 10
 
   # Air Temperature
   - platform: template
@@ -76,6 +87,9 @@ sensor:
       else {
         return NAN;
       }
+    web_server:
+      sorting_group_id: sorting_group_hum
+      sorting_weight: 11
 
   # Dew Point
   - platform: template
@@ -102,12 +116,18 @@ sensor:
       else {
         return NAN;
       }
+    web_server:
+      sorting_group_id: sorting_group_hum
+      sorting_weight: 13
 
   # Absolute Humidity
   - platform: absolute_humidity
     name: Absolute Humidity
     temperature: sensor_hum_air_temperature
     humidity: hum_ezo
+    web_server:
+      sorting_group_id: sorting_group_hum
+      sorting_weight: 14
 
 text_sensor:
   # HUM Raw Value
@@ -120,12 +140,16 @@ text_sensor:
       then:
         - component.update: sensor_hum_air_temperature
         - component.update: sensor_hum_dew_point
+    web_server:
+      sorting_group_id: sorting_group_hum
 
   # Selected Command Result - HUM
   - platform: template
     name: HUM - Command Result
     id: result_hum
     disabled_by_default: true
+    web_server:
+      sorting_group_id: sorting_group_hum
 
 button:
   # Read HUM Sensor
@@ -146,6 +170,8 @@ button:
             else {
               ESP_LOGW("custom_humidity_read", "No Humidity sensor detected at address: ${addHUM}!!");
             }
+    web_server:
+      sorting_group_id: sorting_group_hum
               
   # Send Selected EZO Command - HUM
   - platform: template
@@ -192,6 +218,8 @@ button:
             else {
               id(hum_ezo).send_custom("R");
             }
+    web_server:
+      sorting_group_id: sorting_group_hum
 
 select:
   - platform: template
@@ -217,3 +245,5 @@ select:
       - logger.log:
           format: "Chosen option: %s"
           args: ["x.c_str()"]
+    web_server:
+      sorting_group_id: sorting_group_hum
