--- a/common/ezo_rtd.yaml
+++ b/common/ezo_rtd.yaml
@@ -3,6 +3,14 @@ substitutions:
   addRTD: "102"
   update_rtd: "60s"
 
+  sorting_group_rtd: '36'
+
+web_server:
+  sorting_groups:
+    - id: sorting_group_rtd
+      name: "RTD - EZO"
+      sorting_weight: ${sorting_group_rtd}
+
 # esphome:
 #     on_boot: 
 #         priority: 800
@@ -42,4 +50,7 @@ sensor:
     # on_t: 
     #   then:
     #     - lambda: 
-    #         id(result_ph).publish_state(x); 
+    #         id(result_ph).publish_state(x);
+    web_server:
+      sorting_group_id: sorting_group_rtd
+      sorting_weight: 10
