--- a/common/ezo_ec.yaml
+++ b/common/ezo_ec.yaml
@@ -154,7 +154,7 @@ sensor:
         return NAN;
       }
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
       sorting_weight: 14
 
   # Salinity
@@ -184,7 +184,7 @@ sensor:
         return NAN;
       }
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
       sorting_weight: 10
 
   # Specific Gravity
@@ -214,7 +214,7 @@ sensor:
         return NAN;
       }
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
       sorting_weight: 11
 
 text_sensor:
@@ -231,7 +231,7 @@ text_sensor:
         - component.update: sensor_tds
         - component.update: sensor_specific_gravity
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
 
   # Selected Command Result - Conductivity
   - platform: template
@@ -240,7 +240,7 @@ text_sensor:
     id: result_ec
     # disabled_by_default: true
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
 
 button:
   # Read Conductivity Probe
@@ -263,7 +263,7 @@ button:
               ESP_LOGW("custom_conductivity_read", "No Conductivity sensor detected at address: ${addEC}!");
             }
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
 
   # Send Selected EZO Command - Conductitivy
   - platform: template
@@ -347,7 +347,7 @@ button:
             //   id(ec_ezo).send_custom("R");
             // }
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
 
 select:
   - platform: template
@@ -381,4 +381,4 @@ select:
           format: "Chosen option: %s"
           args: ["x.c_str()"]
     web_server:
-      sorting_group_id: sorting_group_ph
+      sorting_group_id: sorting_group_ec
