--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -16,6 +16,7 @@ binary_sensor:
       - delayed_on_off: 30ms
     web_server:
       sorting_group_id: sorting_group_misc
+    icon: mdi:check-circle
   - platform: gpio
     id: leak_sensor
     pin: 
@@ -29,3 +30,4 @@ binary_sensor:
       - delayed_on_off: 30ms
     web_server:
       sorting_group_id: sorting_group_misc
+    icon: mdi:pipe-leak
