--- a/common/ezo_pmp_duo.yaml
+++ b/common/ezo_pmp_duo.yaml
@@ -26,15 +26,15 @@ ezo_pmp:
     update_interval: "${update_pmp_red}"
 
 api:
-  services: 
-    - service: pump_waste_volume
+  actions: 
+    - action: pump_waste_volume
       variables: 
         dose_volume: float
       then: 
         - ezo_pmp.dose_volume:
             id: ezo_pump_red
             volume: !lambda 'return dose_volume;'
-    - service: pump_waste_volume_time
+    - action: pump_waste_volume_time
       variables:
         dose_volume: float
         dose_time: float
@@ -45,7 +45,7 @@ api:
               return dose_volume;
             duration: !lambda |-
               return dose_time;
-    - service: pump_waste_flow_rate_time
+    - action: pump_waste_flow_rate_time
       variables:
         dose_rate: float
         dose_time: float
@@ -56,7 +56,7 @@ api:
               return dose_rate;
             duration: !lambda |-
               return dose_time;
-    - service: pump_waste_set_calibration
+    - action: pump_waste_set_calibration
       variables:
         actual_volume: float
       then:
@@ -64,14 +64,14 @@ api:
             id: ezo_pump_red
             volume: !lambda |-
               return actual_volume;
-    - service: pump_clean_volume
+    - action: pump_clean_volume
       variables: 
         dose_volume: float
       then: 
         - ezo_pmp.dose_volume:
             id: ezo_pump_green
             volume: !lambda 'return dose_volume;'
-    - service: pump_clean_volume_time
+    - action: pump_clean_volume_time
       variables:
         dose_volume: float
         dose_time: float
@@ -82,7 +82,7 @@ api:
               return dose_volume;
             duration: !lambda |-
               return dose_time;
-    - service: pump_clean_flow_rate_time
+    - action: pump_clean_flow_rate_time
       variables:
         dose_rate: float
         dose_time: float
@@ -93,7 +93,7 @@ api:
               return dose_rate;
             duration: !lambda |-
               return dose_time;
-    - service: pump_clean_set_calibration
+    - action: pump_clean_set_calibration
       variables:
         actual_volume: float
       then:
@@ -101,7 +101,7 @@ api:
             id: ezo_pump_green
             volume: !lambda |-
               return actual_volume;
-    - service: pump_water_change
+    - action: pump_water_change
       variables:
         volume: float
         duration: float
@@ -118,7 +118,7 @@ api:
               return volume;
             duration: !lambda |-
               return duration;
-    - service: pump_water_change_quick
+    - action: pump_water_change_quick
       variables:
         volume: float
       then:
@@ -130,7 +130,7 @@ api:
             id: ezo_pump_red
             volume: !lambda |-
               return volume;
-    - service: pump_waste_change_address
+    - action: pump_waste_change_address
       variables:
         address: int
       then:
@@ -138,7 +138,7 @@ api:
             id: ezo_pump_red
             address: !lambda |-
               return address;
-    - service: pump_clean_change_address
+    - action: pump_clean_change_address
       variables:
         address: int
       then:
