--- a/common/ezo_pmp_extra.yaml
+++ b/common/ezo_pmp_extra.yaml
@@ -22,15 +22,15 @@ ezo_pmp:
     update_interval: "${update_pmp_orange}"
 
 api:
-  services: 
-    - service: pump_orange_dose_volume
+  actions: 
+    - action: pump_orange_dose_volume
       variables: 
         dose_volume: float
       then: 
         - ezo_pmp.dose_volume:
             id: ezo_pump_orange
             volume: !lambda 'return dose_volume;'
-    - service: pump_orange_dose_volume_time
+    - action: pump_orange_dose_volume_time
       variables:
         dose_volume: float
         dose_time: float
@@ -41,7 +41,7 @@ api:
               return dose_volume;
             duration: !lambda |-
               return dose_time;
-    - service: pump_orange_dose_flow_rate_time
+    - action: pump_orange_dose_flow_rate_time
       variables:
         dose_rate: float
         dose_time: float
@@ -52,7 +52,7 @@ api:
               return dose_rate;
             duration: !lambda |-
               return dose_time;
-    - service: pump_orange_dose_set_calibration
+    - action: pump_orange_dose_set_calibration
       variables:
         actual_volume: float
       then:
@@ -60,7 +60,7 @@ api:
             id: ezo_pump_orange
             volume: !lambda |-
               return actual_volume;
-    - service: pump_orange_change_address
+    - action: pump_orange_change_address
       variables:
         address: int
       then:
