--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,6 +1,6 @@
 substitutions:
   # App Version
-  app_version: "24.10.13"
+  app_version: "24.11.0"
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
@@ -21,7 +21,7 @@ packages:
   # ezo_hum: !include common/ezo_hum.yaml
   # ezo_rtd: !include common/ezo_rtd.yaml
   ezo_co2: !include common/ezo_co2.yaml
-  # ezo_do: !include common/ezo_do.yaml
+  ezo_do: !include common/ezo_do.yaml
   ezo_pmp: !include common/ezo_pmp.yaml
   # ezo_pmp_extra: !include common/ezo_pmp_extra.yaml
   ezo_pmp_duo: !include common/ezo_pmp_duo.yaml
